@@ -27,6 +27,3 @@ cover_db/
 MYMETA.*
 
 /Net-BitTorrent-Protocol-*
-
-
-lib/Net/BitTorrent/Protocol/BEP15.pm
