@@ -2,6 +2,9 @@ Net::BitTorrent::Protocol changelog!
 
 {{$NEXT}}
 
+    API Changes/Compatibility Information:
+     * BEP15 - UDP Tracker Protocol for BitTorrent
+
 1.5.0 2016-09-27T03:16:05Z
 
     API Changes/Compatibility Information:
